made correct directories and files for phase 3

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -21,7 +21,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.1</version>
                 <configuration>
-                    <mainClass>ServerMain</mainClass>
+                    <mainClass>server.Server</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -38,7 +38,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        ServerMain
+                                        server.Server
                                     </mainClass>
                                 </manifest>
                             </archive>
