--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -44,7 +44,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        ServerMain
+                                        server.Server
                                     </mainClass>
                                 </manifest>
                             </archive>
